--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,12 @@
 {
   "compilerOptions": {
     "moduleResolution": "Node",
-    "target": "ES2020",
-    "module": "ES2020",
     "allowJs": true,
     "checkJs": true,
-    "rootDir": "src",
-    "outDir": "./dist",
-    "sourceMap": true,
-    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
     "strict": true,
     "skipLibCheck": true
   },
   "include": ["./src"],
-  "exclude": ["node_modules", "./dist"]
+  "exclude": ["node_modules"]
 }
