--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
     "moduleResolution": "Node",
+    "lib": ["ES2021"],
     "allowJs": true,
     "checkJs": true,
     "noEmit": true,
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["./src"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*"]
 }
