--- a/app/package.json
+++ b/app/package.json
@@ -7,8 +7,14 @@
   },
   "version": "1.0.0",
   "license": "MIT",
-  "type": "module",
+  "type": "commonjs",
   "dependencies": {},
+  "scripts": {
+    "watch": "tsc -p tsconfig.json --watch",
+    "prebuild": "rm -rf dist && mkdir dist",
+    "build": "tsc -p tsconfig.build.json",
+    "dev": "node dist/manualTracedLambda.js"
+  },
   "devDependencies": {
     "@aws-lambda-powertools/commons": "^1.4.0",
     "@aws-lambda-powertools/tracer": "^1.4.0",
